- issues/#4 - add CSS override to help with display of text on Safari iOS

--- a/wp-content/themes/start-point/css/overrides.css
+++ b/wp-content/themes/start-point/css/overrides.css
@@ -1,3 +1,8 @@
+body
+{
+	text-rendering: optimizeSpeed;
+}
+
 .three-column-container
 {
 	overflow: hidden;
